--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: AI
-brief-intro: AI Blog
+brief-intro: 记录成长，记录生活
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://ai2019.github.io" # the base hostname & protocol for your site
 
