--- a/_config.yml
+++ b/_config.yml
@@ -14,13 +14,13 @@ url: "https://ai2019.github.io" # the base hostname & protocol for your site
 permalink: /:year/:month/:day/:title/
 
 # other links
-twitter_username: ai2019
-facebook_username: ai2019
-github_username:  ai2019
+twitter_username: 
+facebook_username: 
+github_username:  
 email: pq.ai@outlook.com
-weibo_username: ai2019
-zhihu_username: ai2019
-linkedIn_username: ai2019
+weibo_username: 
+zhihu_username: 
+linkedIn_username: 
 dribbble_username:
 
 description_footer: 码农的成长记录！
